--- a/Financial Cal/SiteCore/healthy.html
+++ b/Financial Cal/SiteCore/healthy.html
@@ -27,72 +27,7 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
     <style>
-        .list-type3 {
-            margin: 0 auto;
-            width: 500px;
-        }
-
-            .list-type3 li, .list-type3 a {
-                float: left;
-                height: 35px;
-                line-height: 35px;
-                position: relative;
-                font-size: 15px;
-                margin-bottom: 12px;
-                font-family: 'Raleway', sans-serif;
-                transition: background-color 1.5s ease;
-            }
-
-            .list-type3 a {
-                padding: 0 60px 0 12px;
-                background: #0089e0;
-                color: #fff;
-                text-decoration: none;
-                -moz-border-radius-bottomright: 4px;
-                -webkit-border-bottom-right-radius: 4px;
-                border-bottom-right-radius: 4px;
-                -moz-border-radius-topright: 4px;
-                -webkit-border-top-right-radius: 4px;
-                border-top-right-radius: 4px;
-            }
-
-                .list-type3 a:before {
-                    content: "";
-                    float: left;
-                    position: absolute;
-                    top: 0;
-                    left: -12px;
-                    width: 0;
-                    height: 0;
-                    border-color: transparent #0089e0 transparent transparent;
-                    border-style: solid;
-                    border-width: 18px 12px 18px 0;
-                }
-
-                .list-type3 a:after {
-                    content: "";
-                    position: absolute;
-                    top: 15px;
-                    left: 0;
-                    float: left;
-                    width: 6px;
-                    height: 6px;
-                    -moz-border-radius: 2px;
-                    -webkit-border-radius: 2px;
-                    border-radius: 2px;
-                    background: #fff;
-                    -moz-box-shadow: -1px -1px 2px #004977;
-                    -webkit-box-shadow: -1px -1px 2px #004977;
-                    box-shadow: -1px -1px 2px #004977;
-                }
-
-                .list-type3 a:hover {
-                    background: #555;
-                }
-
-                    .list-type3 a:hover:before {
-                        border-color: transparent #0089e0 transparent transparent;
-                    }
+  
     </style>
 </head>
 <body>
@@ -284,15 +219,15 @@
 
                         <div class="text-right">  <input type="text" id="txt_Result_Value" class="cssOutput" style="font-size:auto; " value="10,000" disabled="disabled"> </div>
 
-                        <div class="col-md-12"><label class="">เกณมาตรฐาน</label></div>
+                        <div class="col-md-12"><label class="">   เกณฑ์มาตรฐาน 6-12 เท่าของรายจ่ายต่อเดือน (กรณีมีบุตร)</label></div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="list-type3">
                         <ol>
-                            <li><a href="#">Formget Online Form Builder Create Online Forms</a></li>
-                            <li><a href="#">Formget Online Form Builder Create Online Forms</a></li>
-                            <li><a href="#">Formget Online Form Builder Create Online Forms</a></li>
+                            <li><a href="#">Formget Online Form Builder   Online Forms1</a></li>
+                            <li><a href="#">Formget Online Form   Create Online Forms2</a></li>
+                            <li><a href="#">Formget   Form Builder Create Online Forms3</a></li>
                         </ol>
                     </div>
                 </div>
