--- a/Financial Cal/SiteCore/healthy.html
+++ b/Financial Cal/SiteCore/healthy.html
@@ -27,7 +27,6 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
     <style>
-  
     </style>
 </head>
 <body>
@@ -100,10 +99,10 @@
                 </div>
                 <div class="col-md-6" style="background-color:#b6ff00">
 
-                    <div class=" text-center " style="">
+                    <div class="text-center" style="">
                         <div class="">
 
-                            <label id="lblAgr" class="FinanCalLabel"> อายุปัจจุบัน</label>
+                            <label id="lblAgr" class="FinanCalLabel">อายุปัจจุบัน</label>
                             <div class="squarebrackets">
                                 <input type="text" id="txt_hl_Age_Now" class="cssInput  " style="width:170px;font-size:24px;text-align:center;" value="20" maxlength="3">
                             </div>
@@ -135,7 +134,7 @@
                 </div>
             </div>
 
-            <div id="divHealthy_Input_2" class="row" style="display:none">
+            <div id="divHealthy_Input_2" class="row" style="display:block">
 
                 <div class="col-md-6 text-left FinanCalLinkText" onClick="changeSubMenu(1);">
                     <img src="Image/icon/left-arrow.svg" class="iconNext " /> 1. ข้อมูลส่วนบุคคล
@@ -190,38 +189,41 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6" style="background-color:#ff0000; ">
-                    <div class="col-md-12"><label>1. คุณมีสภาพคล่องเพียงพอหรือไม่</label></div>
+            <div id="divHealthy_Output_1" class="row">
+                <div class="col-md-6  col-sm-12 col-xs-12" style="background-color:#ff0000;position:relative ">
+                    <div class="col-md-12 "><label>1. คุณมีสภาพคล่องเพียงพอหรือไม่</label></div>
                     <!--<img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1.png" usemap="#Map1" style="background-size:contain;position: relative;height:400px;width:990px;" />-->
-                    <div class="col-md-3" style="position:relative;">
-                        <div      style="width:200px;background-color:firebrick;margin-left:auto;margin-right:auto;">
-                            <div id='healthy_bg_3_1_graph_1' class="classGraph" style="position: relative;"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_1.png" /></div>
-                            <div id='healthy_bg_3_1_graph_2' class="classGraph" style="position: absolute;top: 0px; "><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_2.png" /></div>
-                            <div id="divLine" style="width:90px;height:40px;position:absolute;top:209px; background-image:url(/PublishingImages/Tax/line.png)"></div>
-                        </div>
+                    <div class="col-md-4 col-sm-4 col-xs-4">
+                        <!--<div style="background-color:firebrick;margin-left:auto;margin-right:auto;">-->
+                        <div id='healthy_bg_3_1_graph_1' class="classGraph" style="position:relative;display:none"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_1.png" /></div>
+                        <div id='healthy_bg_3_1_graph_2' class="classGraph" style="position:relative ;display:none"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_2.png" /></div>
+                        <!--</div>-->
+                        <div id="divLine" style="width:90px;height:40px;position:absolute;top:100px; background-image:url(/PublishingImages/Tax/line.png)"></div>
+
+                        <div style="bottom: -9px;width: 388px !important;position: absolute;width: 100%;right: -358px;"><label>   * เกณฑ์มาตรฐาน 6-12 เท่าของรายจ่ายต่อเดือน (กรณีมีบุตร)</label></div>
                     </div>
 
-                    <div class="col-md-9" style="background-color:cyan">
+                    <div class="col-md-8 col-sm-8 col-xs-8" style="background-color:cyan">
 
-                        <div style="background-color:#fff;" class="col-md-12 borderDashed text-center">
+                        <div style="background-color:#fff;position:relative;" class="col-md-12 borderDashed text-center">
                             <div class="col-md-12 text-left">
-                                <label> ผลลัพธ์คือ</label>
+                                <label>ผลลัพธ์คือ</label>
                             </div>
-                            <div class="col-md-12 text-center">
-                                <input type="text" id="txt_hl_Result_1" class="cssOutput" style="width:220px;font-size:auto;text-align:center; vertical-align:middle;height:30%" value="0" maxlength="3" disabled="disabled">
+                            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                                <input type="text" id="txt_hl_Result_1" class="cssOutput" style="width:100%;text-align:center;vertical-align:middle;" value="0" maxlength="3" disabled="disabled">
+                                <div id="divEmo" style=""></div>
                             </div>
 
                             <div class="col-md-12 text-right">
-                                <label> เท่าของร่ายจ่ายต่อเดือน*</label>
+                                <label>เท่าของร่ายจ่ายต่อเดือน*</label>
                             </div>
                         </div>
-
+                        <div class="col-md-12"><label id="lblmsg"> </label> </div>
+                          <div class="col-md-12"><label id="lbladvice"> </label> </div>
                         <div class="text-right">  <input type="text" id="txt_Result_Value" class="cssOutput" style="font-size:auto; " value="10,000" disabled="disabled"> </div>
-
-                        <div class="col-md-12"><label class="">   เกณฑ์มาตรฐาน 6-12 เท่าของรายจ่ายต่อเดือน (กรณีมีบุตร)</label></div>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <div class="list-type3">
                         <ol>
@@ -235,7 +237,7 @@
 
             <div class="row">
 
-                <div id="divHealthy_Output_1" style="height:400px;width:990px;background-image:url(/PublishingImages/Tax/Thai/bg_title/healthy_bg_3ะะะ.png);position:relative;display:block;background-size:contain;">
+                <!--<div id="divHealthy_Output_1" style="height:400px;width:990px;background-image:url(/PublishingImages/Tax/Thai/bg_title/healthy_bg_3.png);position:relative;display:block;background-size:contain;">
 
                     <!--<map name="Map1">
                         <area shape="rect" coords="608,91,954,141" href="#" onClick="changeGraph(2);">
@@ -244,15 +246,14 @@
                         <area shape="rect" coords="608,256,958,306" href="#" onClick="changeGraph(5);">
                         <area shape="rect" coords="608,311,956,360" href="#" onClick="changeGraph(6);">
                     </map>-->
-
-                    <div id="divResultContent" style="width:440px;height:140px;position:absolute;top:190px;left:165px;background-size: contain; background-color:rebeccapurple;"></div>
-                    <input type="text" id="txt_Result_Value" class="cssOutput" style="width: 200px;text-align: right;font-size: auto;position: absolute;top: 273px;left: 349px;" value="10,000" disabled="disabled">
+                <!--<div id="divResultContent" style="width:440px;height:140px;position:absolute;top:190px;left:165px;background-size: contain; background-color:rebeccapurple;"></div>
+                    <input type="text" id="txt_Result_Value" class="cssOutput" style="width: 200px;text-align: right;font-size:auto;position: absolute;top: 273px;left: 349px;" value="10,000" disabled="disabled">
                     <div id="divEmo" style="width:70px;height:70px;position:absolute;top:55px;left:500px;"></div>
 
-                    <div style="position: absolute; left: 428px; top: 300px;display: none;"><input type="text" id="txt_hl_Result_11" class="cssOutput" style="width:150px;font-size:20px;text-align:center;" value="0" maxlength="14"></div>
+                    <div style="position:absolute; left: 428px; top: 300px;display: none;"><input type="text" id="txt_hl_Result_11" class="cssOutput" style="width:150px;font-size:20px;text-align:center;" value="0" maxlength="14"></div>
                     <div id='healthy_bg_3_1_1' class="classSon" style="position: absolute;top: 340px;left: 170px;"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_1.png" /></div>
                     <div id='healthy_bg_3_1_2' class="classSon" style="position: absolute;top: 340px;left: 170px;"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_2.png" /></div>
-                </div>
+                </div>-->
 
                 <div id="divHealthy_Output_2" style="height:400px;width:990px;background-image:url(/PublishingImages/Tax/Thai/bg_title/healthy_bg_3.png);position:relative;display:none;background-size:contain;">
                     <img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_2.png" usemap="#Map2" style="background-size:contain;position: relative;height:400px;width:990px;" />
