--- a/Financial Cal/SiteCore/healthy.html
+++ b/Financial Cal/SiteCore/healthy.html
@@ -189,8 +189,9 @@
                 </div>
             </div>
 
-            <div id="divHealthy_Output_1" class="row">
-                <div class="col-md-6  col-sm-12 col-xs-12" style="background-color:#ff0000;position:relative ">
+            <div class="row">
+
+                <div id="divHealthy_Output_1" class="col-md-6  col-sm-12 col-xs-12" style="background-color:#ff0000;position:relative ">
                     <div class="col-md-12 "><label>1. คุณมีสภาพคล่องเพียงพอหรือไม่</label></div>
                     <!--<img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1.png" usemap="#Map1" style="background-size:contain;position: relative;height:400px;width:990px;" />-->
                     <div class="col-md-4 col-sm-4 col-xs-4">
@@ -219,18 +220,54 @@
                             </div>
                         </div>
                         <div class="col-md-12"><label id="lblmsg"> </label> </div>
-                          <div class="col-md-12"><label id="lbladvice"> </label> </div>
+                        <div class="col-md-12"><label id="lbladvice"> </label> </div>
                         <div class="text-right">  <input type="text" id="txt_Result_Value" class="cssOutput" style="font-size:auto; " value="10,000" disabled="disabled"> </div>
+                    </div>
+                </div>
+
+                <div id="divHealthy_Output_2" class="col-md-6  col-sm-12 col-xs-12" style="background-color:#ff0000;position:relative;display:block ">
+                    <div class="col-md-12 "><label>2. คุณมีหนี้สินมากเกินไปหรือไม่</label></div>
+                    <!--<img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1.png" usemap="#Map1" style="background-size:contain;position: relative;height:400px;width:990px;" />-->
+                    <div class="col-md-4 col-sm-4 col-xs-4">
+                        <img src="Image/bar/healthy_bg_3_2.png" />
+                        <!--<div style="background-color:firebrick;margin-left:auto;margin-right:auto;">-->
+                        <div id='healthy_bg_3_1_graph_1' class="classGraph" style="position:relative;display:none"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_1.png" /></div>
+                        <div id='healthy_bg_3_1_graph_2' class="classGraph" style="position:relative ;display:none"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_2.png" /></div>
+                        <!--</div>-->
+                        <div id="divLine" style="width:90px;height:40px;position:absolute;top:200px; background-image:url(/PublishingImages/Tax/line.png)"></div>
+
+                        <div style="bottom: -9px;width: 388px !important;position: absolute;width: 100%;right: -358px;"><label>   * เกณฑ์มาตรฐาน คือ หนี้สินไม่ควรเกิน 50% ของสินทรัพย์รวม</label></div>
+                    </div>
+
+                    <div class="col-md-8 col-sm-8 col-xs-8" style="background-color:cyan">
+
+                        <div style="background-color:#fff;position:relative;" class="col-md-12 borderDashed text-center">
+                            <div class="col-md-12 text-left">
+                                <label>ผลลัพธ์คือ</label>
+                            </div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                                <input type="text" id="txt_hl_Result_2" class="cssOutput" style="width:100%;text-align:center;vertical-align:middle;" value="0" maxlength="3" disabled="disabled">
+                                <div id="divEmo" style=""></div>
+                            </div>
+
+                            <div class="col-md-12 text-right">
+                                <!--<label>เท่าของร่ายจ่ายต่อเดือน*</label>-->
+                            </div>
+                        </div>
+                        <div class="col-md-12"><label id="lblmsg"> </label> </div>
+                        <div class="col-md-12"><label id="lbladvice"> </label> </div>
+                        <!--<div class="text-right">  <input type="text" id="txt_Result_Value" class="cssOutput" style="font-size:auto; " value="10,000" disabled="disabled"> </div>-->
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="list-type3">
                         <ol>
-                            <li><a href="#">Formget Online Form Builder   Online Forms1</a></li>
-                            <li><a href="#">Formget Online Form   Create Online Forms2</a></li>
-                            <li><a href="#">Formget   Form Builder Create Online Forms3</a></li>
-                        </ol>
+                            <li><a href="#" onClick="changeGraph(1);">Formget Online Form Builder   Online Forms1</a></li>
+                            <li><a href="#" onClick="changeGraph(2);">Formget Online Form   Create Online Forms2</a></li>
+                            <li><a href="#" onClick="changeGraph(3);">Formget Online Form Builder   Online Forms1</a></li>
+                            <li><a href="#" onClick="changeGraph(4);">Formget Online Form   Create Online Forms2</a></li>
+                            <li><a href="#" onClick="changeGraph(5);">Formget Online Form Builder   Online Forms1</a></li>
                     </div>
                 </div>
             </div>
@@ -254,8 +291,7 @@
                     <div id='healthy_bg_3_1_1' class="classSon" style="position: absolute;top: 340px;left: 170px;"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_1.png" /></div>
                     <div id='healthy_bg_3_1_2' class="classSon" style="position: absolute;top: 340px;left: 170px;"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_2.png" /></div>
                 </div>-->
-
-                <div id="divHealthy_Output_2" style="height:400px;width:990px;background-image:url(/PublishingImages/Tax/Thai/bg_title/healthy_bg_3.png);position:relative;display:none;background-size:contain;">
+                <!--<div id="divHealthy_Output_2" style="height:400px;width:990px;background-image:url(/PublishingImages/Tax/Thai/bg_title/healthy_bg_3.png);position:relative;display:none;background-size:contain;">
                     <img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_2.png" usemap="#Map2" style="background-size:contain;position: relative;height:400px;width:990px;" />
                     <map name="Map2">
                         <area shape="rect" coords="611,37,957,87" href="#" onClick="changeGraph(1);">
@@ -268,7 +304,7 @@
                     <div id="divEmo" style="width:70px;height:70px;position:absolute;top:55px;left:500px;display:none;"></div>
                     <div id="divLine" style="width:90px;height:40px;position:absolute;top:290px;left:27px;background-image:url(/PublishingImages/Tax/line.png)"></div>
                     <div style="position: absolute; left: 260px; top: 110px;"><input type="text" id="txt_hl_Result_2" class="cssOutput" style="width:220px;font-size:auto;text-align:center;" value="0" maxlength="3" disabled="disabled"></div>
-                </div>
+                </div>-->
                 <div id="divHealthy_Output_3" style="height:400px;width:990px;background-image:url(/PublishingImages/Tax/Thai/bg_title/healthy_bg_3.png);position:relative;display:none;background-size:contain;">
                     <img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_3.png" usemap="#Map3" style="background-size:contain;position: relative;height:400px;width:990px;" />
                     <map name="Map3">
