--- a/Financial Cal/SiteCore/healthy.html
+++ b/Financial Cal/SiteCore/healthy.html
@@ -233,42 +233,67 @@
                 </div>
             </div>
 
-            <hr />
-
             <div id="Output" class="row"> </div>
             <h1 class="text-center">  <a href="#step-1" type="button" class="btn btn-primary btn-circle">3</a> ข้อมูลทางการเงิน    </h1>
             <div id="divHealthy_Output_1" class="col-md-12  col-sm-12 col-xs-12">
-                <div class="col-md-12 "><label>1. คุณมีสภาพคล่องเพียงพอหรือไม่?</label></div>
+                <div class="col-md-12  text-center"><label>1. คุณมีสภาพคล่องเพียงพอหรือไม่?</label></div>
                 <!--<img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1.png" usemap="#Map1" style="background-size:contain;position: relative;height:400px;width:990px;" />-->
-                <div class="col-md-4 col-sm-4 col-xs-4 " style="position:relative">
+                <!--<div class="col-md-12 center-block">
+                    <div class="bar-wrapper with-markers center-block">
+                        <div class="bar-container">
+                            <div class="bar-background"></div>
+                            <div class="bar-inner"></div>
+                            <div class="bar-foreground">
+                                <div class="marker p25" style="background-color:red"><span>25%</span></div>
+                                <div class="marker p50"><span>50%</span></div>
+                                <div class="marker p75"><span>75%</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>-->
+
+                <div class="col-md-12 col-sm-12 col-xs-12 " style="position:relative;">
                     <!--<div style="background-color:firebrick;margin-left:auto;margin-right:auto;">-->
+                    <!--<div class="center-block" style="background-color: rgba(160, 160, 160, .1);">-->
+                    <!--<div style="position:absolute; width:100%;height:50%; background-color: rgba(133, 165, 204, .3);"></div>-->
                     <div id='healthy_bg_3_1_graph_1' class="classGraph center-block" style="position:relative;display:none"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_1.png" class=" center-block" /></div>
                     <div id='healthy_bg_3_1_graph_2' class="classGraph center-block" style="position:relative ;display:none"><img src="/PublishingImages/Tax/Thai/bg_title/healthy_bg_3_1_graph_2.png" class=" center-block" /></div>
                     <!--</div>-->
                     <!--<div id="divLine" style="width:90px;height:40px;position:absolute;top:100px; background-image:url(/PublishingImages/Tax/line.png)"></div>-->
                     <div id="divLine" class="Line"></div>
 
-                    <div style="bottom: -9px;width: 388px !important;position: absolute;width: 100%;right: -358px;"><label>   * เกณฑ์มาตรฐาน 6-12 เท่าของรายจ่ายต่อเดือน (กรณีมีบุตร)</label></div>
+                    <!--</div>-->
+
+                    <div style="bottom: -9px;width: 388px !important;position: absolute;width: 100%;right: 102px;"><label class="sText textlight">   * เกณฑ์มาตรฐาน 6-12 เท่าของรายจ่ายต่อเดือน (กรณีมีบุตร)</label></div>
                 </div>
 
-                <div class="col-md-8 col-sm-8 col-xs-8" style="background-color:cyan">
+                <div class="col-md-8  col-md-offset-2 col-sm-12 col-xs-12">
 
-                    <div style="background-color:#fff;position:relative;" class="col-md-12 borderDashed text-center">
+                    <div style="background-color:transparent;position:relative;" class="col-md-12  text-center">
                         <div class="col-md-12 text-left">
-                            <label>ผลลัพธ์คือ</label>
+                            <label class="lblBBL">ผลลัพธ์คือ</label>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
-                            <input type="text" id="txt_hl_Result_1" class="cssOutput" style="width:100%;text-align:center;vertical-align:middle;" value="0" maxlength="3" disabled="disabled">
+
+                            <div style="width:100%;  background-color : rgba(160, 160, 160, .1)">
+                                <input type="text" id="txt_hl_Result_1" class="lblInput lText textHighlight" style="background-color:transparent;border:none;width:100%;text-align:center;vertical-align:middle;" value="0" maxlength="3" disabled="disabled">
+                            </div>
+
                             <div id="divEmo" style=""></div>
                         </div>
 
                         <div class="col-md-12 text-right">
-                            <label>เท่าของร่ายจ่ายต่อเดือน*</label>
+                            <label class="lblBBL ">เท่าของร่ายจ่ายต่อเดือน*</label>
+                        </div>
+
+                        <div style="margin-top:25%;margin-bottom:20px;" class="text-left">
+
+                            <div class="col-md-12"><label id="lblmsg" class="lblBBL mText "> </label> </div>
+                            <div class="col-md-12"><label id="lbladvice" class="lblBBL mText"> </label> </div>
                         </div>
                     </div>
-                    <div class="col-md-12"><label id="lblmsg"> </label> </div>
-                    <div class="col-md-12"><label id="lbladvice"> </label> </div>
-                    <div class="text-right">  <input type="text" id="txt_Result_Value" class="cssOutput" style="font-size:auto; " value="10,000" disabled="disabled"> </div>
+
+                    <div class="col-md-12 text-right"><input type="text" id="txt_Result_Value" class="lblInput lText textHighlight" style="text-align:right " value="10,000" disabled="disabled"> </div>
                 </div>
             </div>
 
