--- a/Financial Cal/SiteCore/healthy.html
+++ b/Financial Cal/SiteCore/healthy.html
@@ -28,12 +28,19 @@
     <link href="Css/iCons.css" rel="stylesheet" />
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <style>
-    </style>
-
+  
+    <!--Step-->
     <link href="Css/ProgressIndicator.css" rel="stylesheet" />
+
+
+    <!--Bootstap Extend-->
+    <link href="Js/Modules/bootstrap-extend/css/bootstrap-extend.css" rel="stylesheet" />
+    <script src="Js/Modules/bootstrap-extend/js/bootstrap-extend.js"></script>
 </head>
 <body>
+   
+
+
 
     <div class="container">
         <div class="btn-group btn-group-justified btn-group-lg">
@@ -126,6 +133,17 @@
                                 <label class="btn active">
                                     <input type='radio' id='rad_Child' name='rad_Child' value='2' checked><i class="fa fa-circle-o fa-2x"> ไม่มี </i><i class="fa fa-dot-circle-o fa-2x"> ไม่มี</i>
                                 </label>
+
+                                <!--<input type="radio" class="rdbtn rdbtn-default" id="rdb-default"><label for="rdb-default">Default</label>-->
+                                <input type="radio" class="rdbtn rdbtn-primary" id="rdb-primary"  value='1' name="rad_Child"><label for="rdb-primary">มี</label>
+                                <input type="radio" class="rdbtn rdbtn-primary" id="rdb-success" value='2'  name="rad_Child"><label for="rdb-success">ไม่มี</label>
+                                <!--<input type="radio" class="rdbtn rdbtn-info" id="rdb-info" name="rd-group"><label for="rdb-info">Info</label>
+                                <input type="radio" class="rdbtn rdbtn-warning" id="rdb-warning" name="rd-group"><label for="rdb-warning">Warning</label>
+                                <input type="radio" class="rdbtn rdbtn-danger" id="rdb-danger" name="rd-group"><label for="rdb-danger">Danger</label>
+                                <input type="radio" class="rdbtn rdbtn-notice" id="rdb-notice" name="rd-group"><label for="rdb-notice">Notice</label>-->
+
+
+
                             </div>
                         </div>
                         <!--<div class="">
